--- a/styleclinica.css
+++ b/styleclinica.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap')
 
-* {
+*{
     margin: 0;
     padding: 0;
 }
@@ -35,14 +35,14 @@ body {
     font-size: 40px;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight:weight;
     font-style: normal;
 }
 .apresentacao__conteudo__lista {
     font-size: 24px;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: weight;
     font-style: normal;
 }
 .apresentacao__links {
